Some problems fixed
Fixed the problem that when getting the path of tags.txt the path start with "/D:/" and cause errors.
Fixed the problem that error occurs when using an empty transaction list to generate an GMM model.